snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220822.093702-3.module.sha256
c98bbeb63bbf9cf672cacce740241e23c8510681394480ae45d04f914e2c0af6